public interface Middleware {
    boolean processar(String email, String senha);
}
